fix create project api 1
